2004-10-18 David Inglis
	Update to new ICDIDebugger interface deprecating old
	
	* src/org/eclipse/debug/core/CDebugModel.java
	* src/org/eclipse/debug/core/CDIDebugModel.java
	* src/org/eclipse/debug/core/ICDebugConfiguration.java 
	* src/org/eclipse/debug/core/ICDebugger.java
	* src/org/eclipse/debug/core/ICDIDebugger.java
	* src/org/eclipse/debug/core/ICDILaunchCOnfiguration.java
	* src/org/eclipse/debug/core/model/IExecFileInfo.java
	* src/org/eclipse/debug/internal/core/CBreakpointManager.java
	* src/org/eclipse/debug/internal/core/CDebugAdapter.java
	* src/org/eclipse/debug/internal/core/DebugConfiguration.java
	* src/org/eclipse/debug/internal/core/model/CDebugTarget.java
	* src/org/eclipse/debug/internal/core/model/CVariableFactory.java
	* src/org/eclipse/debug/internal/core/model/DisassemblyBlock.java
		
2004-10-18 Mikhail Khodjaiants
	Use characters instead of strings.
	* CDIException.java

2004-10-17 Alain Magloire
	Remove deprecated method in CDI
	* cdi/org/eclipse/cdt/debug/core/model/ICDITarget.java
	* cdi/org/eclipse/cdt/debug/core/ICDISession.java

2004-10-15 Alain Magloire
	Adjustment to changes in CDI interface concerning breakpoints.
	Now the thread ids for a breakpoint is specified in the ICDICondition.
	* cdi/org/eclipse/cdt/debug/core/cdi/ICDICondition.java
	* cdi/org/eclipse/cdt/debug/core/cdi/model/ICDIBreakpoint.java
	* cdi/org/eclipse/cdt/debug/core/cdi/model/ICDIBreakpointManagement.java
	* cdi/org/eclipse/cdt/debug/core/cdi/model/ICDITarget.java

	* CBreakpointManager.java
	* CDebugTarget.java

2004-10-14 Mikhail Khodjaiants
	Partial fix for bug 39936 GDB hits modified conditional breakpoints when condition not satisfied.
	Condition has to be set at the mi level.
	* CBreakpointManager.java

2004-10-08 Mikhail Khodjaiants
	Added the launch configuration preference for the register bookkeeping.
	* ICDTLaunchConfigurationConstants.java
	* CExpression.java
	* CRegister.java
	* CRegisterGroup.java
	* CVariable.java
